# apgms-birchal

./: .env  .env.example  .eslintrc.cjs  .gitignore  .prettierrc.json  ASSESSMENT.md  CHANGELOG.md  LICENSE-ALLOWLIST.txt  README.md  SECURITY.md  TASKS.md  allocations.preview.schema.json  bootstrap-apgms.ps1  docker-compose.yml  healthz.200.schema.json  merge-all.ps1  node_modules  package-lock.json  package.json  pnpm-workspace.yaml  readyz.200.schema.json  readyz.503.schema.json  redteam.case.schema.json  redteam.run.report.schema.json  rpt.schema.json  tsconfig.json  vitest.config.ts
apgms/services/tax-engine/: .dockerignore  Dockerfile  README.md  package.json  pyproject.toml  requirements.txt  tsconfig.json
apgms/services/tax-engine/app/: __init__.py  alerts.py  calculations.py  calculator.py  main.py  models.py  processor.py  repository.py  rounding.py  rule_loader.py  rules.py  rules_loader.py  schemas.py  services.py  validators.py
apgms/services/tax-engine/app/api/: __init__.py  tax.py
apgms/services/tax-engine/app/bas/: __init__.py  compiler.py
apgms/services/tax-engine/app/calculations/: __init__.py  base.py  gst.py  payg.py
apgms/services/tax-engine/app/clients/: __init__.py  sbr.py
apgms/services/tax-engine/app/data/: paygw_rules.json  rulesets.json
apgms/services/tax-engine/app/ops_alerts/: paygw_alerts.json
apgms/services/tax-engine/app/rules/: __init__.py  (+5 more)
apgms/services/tax-engine/fastapi/: __init__.py  app.py  testclient.py
apgms/services/tax-engine/policy-data/: README.md
apgms/services/tax-engine/src/: calcGst.js  index.ts  taxEngine.ts
apgms/services/tax-engine/test/: bas.test.ts  calcGst.test.js  gst.test.ts  paygw.test.ts  policy.test.ts
apgms/services/tax-engine/tests/: test_api.py  test_api_traceability.py  test_app.py  test_calculations.py  test_calculator.py  test_compile_bas.py  test_health.py  test_ingestion_alerts.py  test_rounding.py  test_rules.py  test_rules_loader.py  test_tax_engine.py
services/tax-engine/: Makefile  pyproject.toml
services/tax-engine/rules/: bas_v1.json  gst_v1.json  paygw_v1.json
services/tax-engine/tax_engine/: __init__.py  app.py  calculators.py  models.py  openapi.py  rules_loader.py
services/tax-engine/tests/: test_golden_vectors.py
(+1811 files in other folders)
