[tool.poetry]
name = "apgms-tax-engine"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "*"
uvicorn = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
hypothesis = "^6.116.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
